# RT-DETR-v4-install

./: .gitignore  .gitmodules  AGENTS.md  INSTALL.md  README.md  configs.py  pyproject.toml  run_test_detection.py  train-rt-detr-v4-all-variants.py  train-rt-detr-v4-all-variants.sh  train-rt-detr-v4-l.py  train-rt-detr-v4-m.py  train-rt-detr-v4-s.py  train-rt-detr-v4-x.py
